feat: added tests for helper functions that get avg ratings for each service